<resources>
    <string name="app_name">Step Quest</string>
    <string name="default_character_name">Name</string>
    <string name="default_race_class">Race Class</string>
    <string name="default_str_display">STR: 20</string>
    <string name="default_con_display">CON: 9</string>
    <string name="default_int_display">INT: 4</string>
    <string name="default_dex_display">DEX: 9</string>
    <string name="default_wis_display">WIS: 19</string>
    <string name="default_chr_display">CHR: 4</string>
    <string name="default_event_description">Slaying kobold...</string>
    <string name="default_level">Level: 3</string>
    <string name="str">STR:</string>
    <string name="default_stat_value">00</string>
    <string name="roll">Roll Stats</string>
    <string name="create">Create Character </string>
    <string name="dex">DEX:</string>
    <string name="con">CON:</string>
    <string name="intelligence_abbrev">INT:</string>
    <string name="wis">WIS:</string>
    <string name="chr">CHR:</string>
    <string name="error_name_required">You gotta name your dude!</string>

    <string name="explainSTR">Strength (STR) is a measure of your muscular and athletic prowess, and affects your skill with blade-based weapons.</string>
    <string name="explainDEX">Dexterity (DEX) is a measure of your speed and reflexes, and affects your skill with bows and influences the strength of available boosts.</string>
    <string name="explainCON">Constitution (CON) measures your overall physical health, and affects your skill with blunt weapons and the duration of available boosts.</string>
    <string name="explainINT">Intelligence (INT) is your mental and analytical skill, and affects your skill wands and staffs.</string>
    <string name="explainWIS">Wisdom (WIS) represents your reasoning ability and perception, and influences how much experience you gain when completing a task.</string>
    <string name="explainCHR">Charisma (CHR) is a measure of your likability and confidence, and influences the prices of items in the shop.</string>

    <string-array name="class_choices">
        <item>Warrior</item>
        <item>Sorcerer</item>
        <item>Ranger</item>
        <item>Cleric</item>
    </string-array>

    <string-array name="race_choices">
        <item>Birdperson</item>
        <item>Math\'head</item>
        <item>Pump-kin</item>
        <item>Elf</item>
    </string-array>

    <string name="unknown_parameter">\?\?\?\?</string>
    <string name="blade">Blade</string>
    <string name="bow">Bow</string>
    <string name="blunt">Blunt</string>
    <string name="staff">Staff</string>
    <string name="wood">Wood</string>
    <string name="bronze">Bronze</string>
    <string name="iron">Iron</string>
    <string name="steel">Steel</string>
    <string name="obsidian">Obsidian</string>
    <string name="mithril">Mithril</string>

    <string name="rate_dialog_title">Do you enjoy Step Quest?</string>
    <string name="rate_dialog_message">If you\'re enjoying your adventure, would you mind taking a moment to rate it? Thanks for your support/feedback!</string>
    <string name="rate_dialog_ok">Sure!</string>
    <string name="rate_dialog_cancel">Maybe Later</string>
    <string name="rate_dialog_no">Nah I\'m Good.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="blank_string"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inventory">Inventory</string>
    <string name="weapon_name">Weapon Name</string>
    <string name="weapon_type">Weapon Type</string>
    <string name="weapon_material">Weapon Material</string>
    <string name="default_buff_text">+0%</string>
    <string name="loading">Loading...</string>
    <string name="default_gold_text">Gold: 0</string>
    <string name="default_weapon_quantity">x00</string>
    <string name="create_your_hero">Create Your Hero!</string>
    <string name="left"><![CDATA[<]]></string>
    <string name="right"><![CDATA[>]]></string>
    <string name="level_up_points_2">Level Up Points: 2</string>
    <string name="commit">Commit</string>
    <string name="congratz_you_levelled_up">Congratz! You levelled up!</string>
    <string name="you_levelled_up_allocate_your_stat_points">You levelled up! Allocate your stat points!</string>
    <string name="_character">Character</string>
    <string name="save">Save</string>
    <string name="_inventory">Inventory</string>
    <string name="settings">Settings</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="game_saved">Game saved.</string>
    <string name="music">Music</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="a_game_by_matt_delsordo">A game by Matt DelSordo</string>
    <string name="inventory_icons_by">Inventory icons by </string>
    <string name="icons8">icons8</string>
    <string name="music_by">Music by </string>
    <string name="zac_wilkins">Zac Wilkins</string>
    <string name="sound_effects_by">Sound effects from </string>
    <string name="littlerobotsoundfactory">SoundBible.com</string>
    <string name="misc_text">This activity doesn\'t do anything, I just couldn\'t figure out an appropriate place to implement up-navigation so here\'s an activity that has it.</string>
    <string name="no_pedometer_message">Step Quest relies on your device\'s pedometer but it looks like your device doesn\'t have one! You can still use the game but it\'ll probably be really boring for you. Sorry!</string>
    <string name="delete_character_confirmation">Clicking yes will delete all your character data! Are you sure?</string>
    <string name="confirm_delete">Yes, this is what I want</string>
    <string name="refuse_delete">No way</string>
    <string name="no_pedometer_confirm">Darn</string>
    <string name="delete_character">Delete Character</string>
    <string name="you_levelled_up">You levelled up!</string>
    <string name="equipped_weapon_text">Equipped a weapon!</string>
    <string name="photo">Take Photo</string>
    <string name="take_video">Take Video</string>
    <string name="camera_denied">Camera Permission Denied</string>
    <string name="hark">Hark!</string>
    <string name="default_step_cost_indicator">10000</string>
    <string name="weapon_value">Weapon Value</string>
    <string name="default_weapon_price">1000000</string>
    <string name="shop">Shop</string>
    <string name="weapons">Weapons</string>
    <string name="boosts">Boosts</string>
    <string name="blacksmith">Blacksmith</string>
    <string name="purchase">Purchase</string>
    <string name="no_thanks">No thanks!</string>
    <string name="yes_please">Yes please!</string>
    <string name="default_boost_time">00:00</string>
    <string name="boost_description">Boost Description</string>
    <string name="journal">Journal</string>
    <string name="statistics">Statistics</string>
    <string name="adventure_log">Adventure Log</string>
    <string name="steps_taken_000">Steps taken: </string>
    <string name="approx_distance_travelled_000_miles">Approx. Distance Travelled (Miles): </string>
    <string name="total_monsters_defeated_000">Total Monsters Defeated: </string>
    <string name="lifetime_gold_acquired_000g">Lifetime Gold Acquired: </string>
    <string name="lifetime_weapons_acquired_000">Lifetime Weapons Acquired: </string>
    <string name="total_dungeons_cleared_000">Total Dungeons Cleared: </string>
    <string name="simple_list_text">Simple List Text</string>
    <string name="default_info_type_text">Type: Sword (x0.0)</string>
    <string name="default_info_material_text">Material: Wood (x0.0)</string>
    <string name="bracket">}</string>
    <string name="default_info_modifier_text">Total Modifier: x1.0</string>
    <string name="default_info_sale_price">Sale price: 133g</string>
    <string name="back">Back</string>
    <string name="equip_weapon">Equip weapon</string>
    <string name="sell_one_weapon">Sell 1</string>
    <string name="junk">Junk</string>
    <string name="make_the_sale">Make the sale.</string>
    <string name="ok">OK</string>
    <string name="price_0g">Price: 0</string>
    <string name="duration_mins">Duration</string>
    <string name="bonus">Bonus</string>
    <string name="_continue">Continue</string>
    <string name="tutorial_title">Tutorial</string>
    <string name="help">Help</string>
    <string name="tutorial_reminder">You can revisit this tutorial from the menu at any time!</string>
    <string name="shop_activity_title">Blacksmith</string>
    <string name="advlog_activity_title">Adventure Log</string>
    <string name="levelup_activity_title">Level Up!</string>
    <string name="equip_weapon_on_purchase">Equip weapon on purchase</string>
    <string name="send_feedback">Send Feedback?</string>
    <string name="feedback_body">If you are reporting a bug, please include your device model and Android version number!</string>
    <string name="dev_email">mattdelsordo+stepquest@gmail.com</string>
    <string name="feedback_subject">Feedback</string>
    <string name="send_feedback_colon">Send Feedback:</string>
    <string name="options">Options</string>
    <string name="_0">0</string>
    <string name="don_t_show_again">Don\'t show again.</string>
    <string name="unable_to_handle_market_url">Unable to handle market URL.</string>
    <string name="delete_save_file">Delete Save File?</string>
    <string name="sell_item">Sell Item?</string>
    <string name="no_pedometer_detected">No Pedometer Detected</string>
    <string name="quest_note_title">Quest Notes</string>


</resources>
