<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_game_by_matt_delsordo"
        android:textStyle="bold"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_icons_by"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="4sp"
            android:paddingRight="4sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icons8"
            android:id="@+id/textview_settings_iconattribute"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_by"
            android:paddingStart="10dp"
            android:paddingEnd="4sp"
            android:paddingLeft="10dp"
            android:paddingRight="4sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zac_wilkins"
            android:id="@+id/textview_settings_musicattribute"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_effects_by"
            android:paddingStart="10dp"
            android:paddingEnd="4sp"
            android:paddingLeft="10dp"
            android:paddingRight="4sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/littlerobotsoundfactory"
            android:id="@+id/textview_settings_effectsattribute"/>
    </LinearLayout>
</LinearLayout>