<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sword"
            android:id="@+id/iv_weaponinfo_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weapon_name"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/tv_weaponinfo_name"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_weapon_quantity"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/tv_weaponinfo_quantity"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_info_type_text"
                android:id="@+id/tv_weaponinfo_type"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_info_material_text"
                android:id="@+id/tv_weaponinfo_material"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bracket"
            android:layout_weight="0"
            android:textSize="28sp"
            android:padding="4dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/default_info_modifier_text"
            android:id="@+id/tv_weaponinfo_modifier"
            android:textSize="20sp"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_info_sale_price"
        android:layout_gravity="center"
        android:gravity="end"
        android:textSize="14sp"
        android:paddingTop="8dp"
        android:id="@+id/tv_weaponinfo_saleprice"/>
</LinearLayout>